<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btn_share"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="#b6c93c"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/text_share" />

        <Button
            android:id="@+id/btn_collect"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#3cc998"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/text_collect" />

        <Button
            android:id="@+id/btn_exit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#3ca8c9"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/text_exit" />
    </LinearLayout>
</LinearLayout>